# Monica-AI

./: README.md  app.py  pyproject.toml  requirements.txt
Monica-AI/: main.py  pyproject.toml
data/: venues.csv  venues.py
notebooks/feature-sandbox/: wedding-planner.ipynb
src/: chat.py  ui.py
src/monica_ai/: __init__.py
src/monica_ai/wed_wire_tools/: __init__.py  chat.py
src/tools/: README.md  base_tool.py  call_tool.py  messanger.py  search_venues.py
