[project]
name = "monica-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "browser-use>=0.1.43",
    "openai>=1.77.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
    "twilio>=9.5.2",
    "websockets>=15.0.1",
]
